refactor param
